Add core page structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <title>Document</title>
 </head>
 <body>
+<main>
+    <section>landing page
+        <h1>welcome</h1>
+        <div>welcome message</div>
+        <div>main image</div>
+        <div>
+            <div>instructions button</div>
+            <div>start game button</div>
+        </div>
+    </section>
+    <section>
+        <div>score</div>
+        <div>logo image</div>
+        <div>answer options
+            <div>answer option 1</div>
+            <div>answer option 1</div>
+            <div>answer option 1</div>
+        </div>
+    </section>
+    <section>results
+        <div>your score is x out of y</div>
+        <div>replay button</div>
+        <div>quit button</div>
+    </section>
+</main>
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
