Create structure for game area

--- a/index.html
+++ b/index.html
@@ -20,12 +20,26 @@
     </section>
     <section>
         <div>score</div>
-        <div>logo image</div>
-        <div>answer options
-            <div>answer option 1</div>
-            <div>answer option 1</div>
-            <div>answer option 1</div>
+
+        <!-- game block starts here -->
+        <div class="game-area">
+                <h2>What car company logo is this?</h2>
+            <div class="flex-container">
+                <div class="flex-item-game">
+                    <!-- temp static image -->
+                    <img src="assets/images/peugeot-logo.png">
+                </div>
+                <div class="flex-item-game">
+                    <div class="answer-area">
+                        <div class="answer-option">mercedes</div>
+                        <div class="answer-option">peugeot</div>
+                        <div class="answer-option">tesla</div>
+                    </div>
+                </div>
+            </div>
         </div>
+        <!-- end of game block -->
+
     </section>
     <section>results
         <div>your score is x out of y</div>
