Remove static image from question area div

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
         <div class="game-area">
                 <h2>What car company logo is this?</h2>
             <div class="flex-container">
-                <div class="flex-item-game">
-                    <!-- temp static image -->
-                    <img src="assets/images/peugeot-logo.png">
-                </div>
+                <div id="question-img" class="flex-item-game"></div>
                 <div class="flex-item-game">
                     <div class="answer-area">
                         <div class="answer-option">mercedes</div>
