Add IDs to answer options in html file

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <div id="question-img" class="flex-item-game"></div>
                 <div class="flex-item-game">
                     <div class="answer-area">
-                        <div class="answer-option">mercedes</div>
-                        <div class="answer-option">peugeot</div>
-                        <div class="answer-option">tesla</div>
+                        <div id="answerOptionA" class="answer-option"></div>
+                        <div id="answerOptionB" class="answer-option"></div>
+                        <div id="answerOptionC" class="answer-option"></div>
                     </div>
                 </div>
             </div>
