Add onclick attribute to answer options elements

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <div id="question-img" class="flex-item-game"></div>
                 <div class="flex-item-game">
                     <div class="answer-area">
-                        <div id="answerOptionA" class="answer-option"></div>
-                        <div id="answerOptionB" class="answer-option"></div>
-                        <div id="answerOptionC" class="answer-option"></div>
+                        <div id="answerOptionA" class="answer-option" onclick="checkAnswer('answerOptionA')"></div>
+                        <div id="answerOptionB" class="answer-option" onclick="checkAnswer('answerOptionB')"></div>
+                        <div id="answerOptionC" class="answer-option" onclick="checkAnswer('answerOptionC')"></div>
                     </div>
                 </div>
             </div>
