Create structure for results area

--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
         <!-- end of game block -->
 
     </section>
-    <section>results
-        <div>your score is x out of y</div>
-        <div>replay button</div>
-        <div>quit button</div>
+
+    <!-- results section starts here -->
+    <section>
+        <p>You answered <span>0</span> out of <span>10</span> correctly</p>
+        <div class="btn">replay</div>
+        <div class="btn">quit</div>
     </section>
+    <!-- end of results section -->
 </main>
 
     <script src="assets/js/script.js"></script>
