Add span element to display user score in results section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- results section starts here -->
     <section>
-        <p>You answered <span>0</span> out of <span>10</span> correctly</p>
+        <p>You answered <span id="user-score"></span> out of <span>10</span> correctly</p>
         <div class="btn">replay</div>
         <div class="btn">quit</div>
     </section>
