Add script to load quiz questions

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
     <!-- end of results section -->
 </main>
-
+    <script src="assets/js/questions.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
