--- a/index.html
+++ b/index.html
@@ -35,6 +35,26 @@
                 </div>
             </div>
         </div>
+        <!--
+            Learned how to create a Modal Box with CSS and JavaScript and adopted code from this W3Schools
+            (https://www.w3schools.com/howto/howto_css_modals.asp) tutorial
+        -->
+        <div id="correctModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>Correct!</p>
+            </div>
+        </div>
+
+        <div id="wrongModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>Correct Answer is <span id="correctAnswerModal"></span></p>
+            </div>
+        </div>
+
         <!-- end of game block -->
 
     </section>
