Replace id names for correct/wrong answer modal boxes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 Learned how to create a Modal Box with CSS and JavaScript and adopted code from this W3Schools
                 (https://www.w3schools.com/howto/howto_css_modals.asp) tutorial
             -->
-            <div id="correctModal" class="modal">
+            <div id="correctAnswerModal" class="modal">
                 <!-- Modal content -->
                 <div class="modal-content">
                     <span class="close">&times;</span>
@@ -46,11 +46,11 @@
                 </div>
             </div>
 
-            <div id="wrongModal" class="modal">
+            <div id="wrongAnswerModal" class="modal">
                 <!-- Modal content -->
                 <div class="modal-content">
                     <span class="close">&times;</span>
-                    <p>Correct Answer is <span id="correctAnswerModal"></span></p>
+                    <p>Correct Answer is <span id="correctAnswer"></span></p>
                 </div>
             </div>
         </section>
