--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                     </div>
                 </div>
                 <div class="flex-item-home">
-                    <img src="assets/images/main-img-dark.jpg" alt="">
+                    <img src="assets/images/main-img-dark.jpg"
+                    alt="Front view of a brandless modern car on a black background">
                 </div>
             </div>
         </section>
