Add classes for home section elements to enable styling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <img src="assets/images/main-img-dark.jpg"
                     alt="Front view of a brandless modern car on a black background">
                 </div>
-                <div class="flex-item">
+                <div class="flex-item content-home">
                     <h1>Car Logo Quiz</h1>
                     <p>How well do you know car logos?</p>
                     <p>Take this quiz to find out!</p>
@@ -25,8 +25,8 @@
                         <div>Theme 1</div>
                         <div>Theme 2</div>
                     </div>
-                    <div>
-                        <div>Start Quiz</div>
+                    <div class="btn-wrapper">
+                        <div id="btn-start" class="btn">Start Quiz</div>
                     </div>
                 </div>
             </div>
