Replace class name for answer buttons and remove duplicate code from CSS file

--- a/index.html
+++ b/index.html
@@ -32,17 +32,18 @@
             </div>
         </section>
         <!-- end of home section -->
+
+        <!-- game section starts here -->
         <section>
-            <!-- game section starts here -->
             <div class="game-area">
                     <h2>What car company logo is this?</h2>
                 <div class="flex-container">
                     <div id="question-img" class="flex-item"></div>
                     <div class="flex-item">
                         <div class="answer-area">
-                            <div id="answerOptionA" class="answer-option" onclick="checkAnswer('answerOptionA')"></div>
-                            <div id="answerOptionB" class="answer-option" onclick="checkAnswer('answerOptionB')"></div>
-                            <div id="answerOptionC" class="answer-option" onclick="checkAnswer('answerOptionC')"></div>
+                            <div id="answerOptionA" class="btn" onclick="checkAnswer('answerOptionA')"></div>
+                            <div id="answerOptionB" class="btn" onclick="checkAnswer('answerOptionB')"></div>
+                            <div id="answerOptionC" class="btn" onclick="checkAnswer('answerOptionC')"></div>
                         </div>
                     </div>
                 </div>
