Add animation for buttons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <div>Theme 2</div>
                     </div>
                     <div class="btn-wrapper">
-                        <div id="btn-start" class="btn">Start Quiz</div>
+                        <div id="btn-start" class="btn bouncy">Start Quiz</div>
                     </div>
                 </div>
             </div>
@@ -41,9 +41,9 @@
                     <div id="question-img" class="flex-item"></div>
                     <div class="flex-item">
                         <div class="answer-area">
-                            <div id="answerOptionA" class="btn" onclick="checkAnswer('answerOptionA')"></div>
-                            <div id="answerOptionB" class="btn" onclick="checkAnswer('answerOptionB')"></div>
-                            <div id="answerOptionC" class="btn" onclick="checkAnswer('answerOptionC')"></div>
+                            <div id="answerOptionA" class="btn bouncy" onclick="checkAnswer('answerOptionA')"></div>
+                            <div id="answerOptionB" class="btn bouncy" style="animation-delay:0.07s" onclick="checkAnswer('answerOptionB')"></div>
+                            <div id="answerOptionC" class="btn bouncy" style="animation-delay:0.14s" onclick="checkAnswer('answerOptionC')"></div>
                         </div>
                     </div>
                 </div>
