Add ids for each html section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <!-- home section starts here -->
-        <section>
+        <section id="home-section">
             <div class="flex-container">
                 <div class="flex-item">
                     <img src="assets/images/main-img-dark.jpg"
@@ -34,7 +34,7 @@
         <!-- end of home section -->
 
         <!-- game section starts here -->
-        <section>
+        <section id="quiz-section" style = "display: none;">
             <div class="game-area">
                     <h2>What car company logo is this?</h2>
                 <div class="flex-container">
