Add ids for each html section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!-- end of game block -->
 
         <!-- results section starts here -->
-        <section style = "display: none;">
+        <section id="results-section" style = "display: none;">
             <p>You answered <span id="user-score"></span> out of <span>10</span> correctly</p>
             <div class="btn">replay</div>
             <div class="btn">quit</div>
