Update class names and revise structure of home section

--- a/index.html
+++ b/index.html
@@ -13,21 +13,20 @@
         <section id="home-section">
             <div class="flex-container">
                 <div class="flex-item">
+                    <div>
+                        <h1>Car Logo Quiz</h1>
+                        <p>How well do you know car logos?</p>
+                        <p>Take this quiz to find out!</p>
+                        <div class="btn-wrapper">
+                            <div class="btn bouncy">switch theme</div>
+                            <div id="btn-start" class="btn bouncy">Start Quiz</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-item"></div>
+                <div class="flex-item img-sm-screen">
                     <img src="assets/images/main-img-dark.jpg"
                     alt="Front view of a brandless modern car on a black background">
-                </div>
-                <div class="flex-item content-home">
-                    <h1>Car Logo Quiz</h1>
-                    <p>How well do you know car logos?</p>
-                    <p>Take this quiz to find out!</p>
-                    <div>
-                        <p>Select preferred theme</p>
-                        <div>Theme 1</div>
-                        <div>Theme 2</div>
-                    </div>
-                    <div class="btn-wrapper">
-                        <div id="btn-start" class="btn bouncy">Start Quiz</div>
-                    </div>
                 </div>
             </div>
         </section>
