Add animation delay to start button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <p>Take this quiz to find out!</p>
                         <div class="btn-wrapper">
                             <div class="btn bouncy">switch theme</div>
-                            <div id="btn-start" class="btn bouncy">Start Quiz</div>
+                            <div id="btn-start" class="btn bouncy" style="animation-delay:0.07s">Start Quiz</div>
                         </div>
                     </div>
                 </div>
