Rename id for feedback modal

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 Learned how to create a Modal Box with CSS and JavaScript and adopted code from this W3Schools
                 (https://www.w3schools.com/howto/howto_css_modals.asp) tutorial
             -->
-            <div id="wrongAnswerModal" class="modal">
+            <div id="modal-feedback" class="modal">
                 <div class="modal-content">
                     <!-- Modal header -->
                     <div class="modal-header">
