Update html content for results section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <section id="results-section">
             <div class="flex-container">
                 <div class="flex-item">
-                    <p>You answered <span id="user-score"></span> out of <span>10</span> correctly</p>
+                    <p>You answered <br><span id="user-score"></span> out of <span>10</span><br> questions correctly</p>
                     <div class="btn-wrapper">
                         <div class="btn bouncy">replay</div>
                         <div class="btn bouncy" style="animation-delay:0.07s">quit</div>
