Create function to restart quiz

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="flex-item">
                     <p>You answered <br><span id="user-score"></span> out of  <span id="total-questions"></span><br>  questions correctly</p>
                     <div class="btn-wrapper">
-                        <div class="btn bouncy">replay</div>
+                        <div class="btn bouncy" id="btn-restart">replay</div>
                         <div class="btn bouncy" style="animation-delay:0.07s">quit</div>
                     </div>
                 </div>
