--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <p>You answered <br><span id="user-score"></span> out of  <span id="total-questions"></span><br>  questions correctly</p>
                     <div class="btn-wrapper">
                         <div class="btn bouncy" id="btn-restart">replay</div>
-                        <div class="btn bouncy" style="animation-delay:0.07s">quit</div>
+                        <div class="btn bouncy" id="btn-quit" style="animation-delay:0.07s">quit</div>
                     </div>
                 </div>
                 <div class="flex-item"></div>
