Add JS code for dark and light theme switcher

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <p>How well do you know car logos?</p>
                         <p>Take this quiz to find out!</p>
                         <div class="btn-wrapper">
-                            <div class="btn bouncy">switch theme</div>
+                            <div class="btn bouncy" id="switch" onclick="toggleTheme()">switch theme</div>
                             <div id="btn-start" class="btn bouncy" style="animation-delay:0.07s">Start Quiz</div>
                         </div>
                     </div>
