--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +11,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
-    <title>Document</title>
+    <title>Car Logo Quiz</title>
 </head>
+
 <body>
     <main>
         <!-- home section starts here -->
@@ -31,14 +33,14 @@
                 <div class="flex-item"></div>
                 <div class="flex-item img-sm-screen">
                     <img src="assets/images/main-img-dark.jpg"
-                    alt="Front view of a brandless modern car on a black background">
+                        alt="Front view of a brandless modern car on a black background">
                 </div>
             </div>
         </section>
         <!-- end of home section -->
 
         <!-- game section starts here -->
-        <section id="quiz-section" style = "display: none;">
+        <section id="quiz-section" style="display: none;">
             <div class="flex-container">
                 <div class="flex-item">
                     <h2>What car company logo is this?</h2>
@@ -47,8 +49,10 @@
                         <div class="flex-item">
                             <div class="answer-area">
                                 <div id="answerOptionA" class="btn bouncy" onclick="checkAnswer('answerOptionA')"></div>
-                                <div id="answerOptionB" class="btn bouncy" style="animation-delay:0.07s" onclick="checkAnswer('answerOptionB')"></div>
-                                <div id="answerOptionC" class="btn bouncy" style="animation-delay:0.14s" onclick="checkAnswer('answerOptionC')"></div>
+                                <div id="answerOptionB" class="btn bouncy" style="animation-delay:0.07s"
+                                    onclick="checkAnswer('answerOptionB')"></div>
+                                <div id="answerOptionC" class="btn bouncy" style="animation-delay:0.14s"
+                                    onclick="checkAnswer('answerOptionC')"></div>
                             </div>
                         </div>
                     </div>
@@ -75,10 +79,10 @@
                         <div class="flex-item">
                             <div id="answer-img"></div>
                         </div>
-                        <div class="text-center"></p>
+                        <div class="text-center">
                             <p id="modal-message">
-                            <br>
-                            <p id="correctAnswer"></p>
+                                <br>
+                                <p id="correctAnswer"></p>
                         </div>
                     </div>
                 </div>
@@ -87,10 +91,12 @@
         <!-- end of game block -->
 
         <!-- results section starts here -->
-        <section id="results-section" style = "display: none;">
+        <section id="results-section" style="display: none;">
             <div class="flex-container">
                 <div class="flex-item">
-                    <p>You answered <br><span id="user-score"></span> out of  <span id="total-questions"></span><br>  questions correctly</p>
+                    <h2>End of Quiz!</h2>
+                    <p>You answered <br><span id="user-score"></span> out of <span id="total-questions"></span><br>
+                        questions correctly</p>
                     <div class="btn-wrapper">
                         <div class="btn bouncy" id="btn-restart">replay</div>
                         <div class="btn bouncy" id="btn-quit" style="animation-delay:0.07s">quit</div>
@@ -108,4 +114,5 @@
     <script src="assets/js/questions.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
